Port llama2.c whole, with bulk packed-buffer binary I/O and a float-exponent expt
examples/llama2/: run.c ported to one Lisp file -- checkpoint loader, tokenizer +
BPE encoder, forward pass, temperature/top-p sampler (run.c's xorshift bit for
bit), generate loop -- over the real TinyStories checkpoints (stories260K +
tok512 checked in, stories15M one script away). Greedy decoding tells the same
story as the C program byte for byte on all four backends; a seeded sample too.
With --simd: JVM 23 -> 87 tok/s, wasm-GC 0.4 -> 46, interpreter from ~15 s/token
to 15-25 tok/s.

What the port needed from the language:

- read-sequence / write-sequence over a PACKED buffer (a packed float array of
  any rank, a packed (unsigned-byte 8|16|32) vector) move raw little-endian
  elements in ONE native transfer on every backend: the %read-sequence-packed /
  %write-sequence-packed declining primitives in front of the element loop
  (interpreter ByteBuffer, JVM _readSeqPacked/_writeSeqPacked gated on use, wasm
  _read_packed/_write_packed chunking through HEAP_PTR incl. the --simd vblock
  arm). The 15M-float checkpoint loads in ~0.2 s instead of 2 min / 75 s / 10 s.
  The Gray / sockets / stdin dispatchers pass a nil :end through instead of
  taking (length seq), which a rank-2 buffer has not. .kb/binary-sequence-io.md.
- expt dispatches on the RUNTIME exponent: a float or ratio exponent arriving
  through a variable or a call gives a float on the JVM (_pow(Object,Object),
  Math.pow over the contagion) and on wasm-GC (exp(y*log(x)) over the software
  exp/log, Math.pow edges, integer-valued float exponents on the exact path) --
  closes .todo/435 (ClJsonE2eTest decodes floats now).
- ExamplesE2eTest manifest fields env: and simd:.

Docs (en/ja), ci-spec cases, unit tests on all three compile/eval paths, and two
new todos from the measurement: the wasm software exp is wrong beyond |x| ~ 100
(456) and the JVM run's road from 87 to ~150 tok/s (457).

Co-Authored-By: Claude Fable 5 <no